@@ -22,6 +22,8 @@ git-annex (10.20250103) UNRELEASED; urgency=medium
     annex.http-headers-command.
   * Added git configs annex.post-update-command and annex.pre-commit-command
     that correspond to the post-update-annex and pre-commit-annex hooks.
+  * Added annex.pre-init-command git config and pre-init-annex hook
+    that is run before git-annex repository initialization.
 
  -- Joey Hess <id@joeyh.name>  Fri, 03 Jan 2025 14:30:38 -0400
 
